# one-stream-frame

./: README.md  pyproject.toml
stream_frame/: admin.py  apps.py  models.py  urls.py  views.py
stream_frame/migrations/: 0001_initial.py  0002_delete_serviceaccount.py  0003_initial.py  0004_channel.py  0005_channel_created_channel_modified.py  0006_videoembedon_alter_channel_channel_id.py
stream_frame/templates/stream_frame/: framegen.html  framegen.js
